[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = "Having winter fun with Advent of Code 2024 ☃️"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pyinstrument = "^5.0.0"
plotext = "^5.2.8"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
